--- a/Rybak/Jenkinsfile
+++ b/Rybak/Jenkinsfile
@@ -8,7 +8,7 @@ node {
 
     stage('Build image') {
 
-        app = docker.build("vladsanyuk/ssdevopscc")
+        app = docker.build("mypr/rybak")
     }
 
     stage('Push image') {
